--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,18 +2,23 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:id="@+id/navegacion_inicio"
+        android:icon="@drawable/ic_inicio"
+        android:title="Inicio" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/nagevacion_buscar"
+        android:icon="@drawable/ic_buscar"
+        android:title="Buscar" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/nagevacion_carrito"
+        android:icon="@drawable/ic_carito"
+        android:title="Carrito" />
+
+    <item
+        android:id="@+id/nagevacion_perfil"
+        android:icon="@drawable/ic_usuario"
+        android:title="Perfil" />
 
 </menu>
