--- a/app/src/main/res/layout/activity_lista_tiendas_cercanas.xml
+++ b/app/src/main/res/layout/activity_lista_tiendas_cercanas.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListaTiendasCercanasActivity">
+    tools:context=".view.Implement.ListaTiendasCercanasActivity">
 
 
     <!-- HEADER MENU-->
@@ -93,7 +93,9 @@
                 android:text="TIENDAS DISPONIBLES"
                 android:textColor="#0089BA"
                 />
+
             <!-- LISTA DE TIENDAS CERCANAS -->
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -119,6 +121,7 @@
                     android:backgroundTint="#0089BA"
                     />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -144,6 +147,7 @@
                     android:backgroundTint="#0089BA"
                     />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
