--- a/app/src/main/res/layout/activity_recover_account.xml
+++ b/app/src/main/res/layout/activity_recover_account.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RecoverAccountActivity">
+    tools:context=".view.Implement.RecoverAccountActivity">
 
     <!-- Header aligned to bottom -->
     <RelativeLayout
