--- a/app/src/main/res/layout/activity_register_usuario.xml
+++ b/app/src/main/res/layout/activity_register_usuario.xml
@@ -74,7 +74,7 @@
                     android:id="@+id/imageView2"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/icono_user"
+                    app:srcCompat="@drawable/icono_user"
                     android:layout_gravity="center"
                     android:tint="#888585"
                     android:layout_weight="1"
@@ -124,7 +124,7 @@
                     android:id="@+id/imageView3"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/icono_user"
+                    app:srcCompat="@drawable/icono_user"
                     android:layout_gravity="center"
                     android:tint="#888585"
                     android:layout_weight="1"
@@ -174,7 +174,7 @@
                     android:id="@+id/imageView4"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/icono_mail"
+                    app:srcCompat="@drawable/icono_mail"
                     android:layout_gravity="center"
                     android:tint="#888585"
                     android:layout_weight="1"
@@ -224,7 +224,7 @@
                     android:id="@+id/imageView5"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/icono_candado"
+                    app:srcCompat="@drawable/icono_candado"
                     android:layout_gravity="center"
                     android:tint="#888585"
                     android:layout_weight="1"
@@ -274,7 +274,7 @@
                     android:id="@+id/imageView6"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/icono_candado"
+                    app:srcCompat="@drawable/icono_candado"
                     android:layout_gravity="center"
                     android:tint="#888585"
                     android:layout_weight="1"
